# rainbowrooster

./: README.md  buf.gen.yaml  products.example  pyproject.toml  stores.example
src/rainbowrooster/: __init__.py  base_builder.py  base_writer.py  cli.py  config.py  file_reader.py  filename_builder.py  frontmatter_builder.py  generator.py  markdown_writer.py  snake_case.py  stores_loader.py
